// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Round matches snapshot 1`] = `
.emotion-0 {
  border-radius: 50%;
}

<img
  className="emotion-0 emotion-1"
  src="https://goo.gl/fbAQLP"
/>
`;

exports[`Avatar Square matches snapshot 1`] = `
.emotion-0 {
  border-radius: 6px;
}

<img
  className="emotion-0 emotion-1"
  src="https://goo.gl/fbAQLP"
/>
`;
